--- a/src/app/pages/media/media.component.html
+++ b/src/app/pages/media/media.component.html
@@ -72,7 +72,7 @@
                       <mat-icon>more_vert</mat-icon>
                     </button>
                     <mat-menu #imageMenu="matMenu">
-                      <button mat-menu-item (click)="openDetailsDialog(item)">
+                      <button mat-menu-item (click)="openDetailsDialog(item)"> item)">
                         <mat-icon>info</mat-icon>
                         <span>Details</span>
                       </button>
@@ -84,7 +84,7 @@
                         <mat-icon>cloud_upload</mat-icon>
                         <span>Mirror</span>
                       </button>
-                      <button mat-menu-item color="warn" (click)="deleteSelected(item.sha256)">
+                      <button mat-menu-item color="warn" (click)="openDetailsDialog(item)">
                         <mat-icon color="warn">delete</mat-icon>
                         <span class="delete-text">Delete</span>
                       </button>
@@ -148,7 +148,7 @@
                       <mat-icon>more_vert</mat-icon>
                     </button>
                     <mat-menu #videoMenu="matMenu">
-                      <button mat-menu-item (click)="openDetailsDialog(item)">
+                      <button mat-menu-item (click)="openDetailsDialog(item)"> item)">
                         <mat-icon>info</mat-icon>
                         <span>Details</span>
                       </button>
@@ -160,7 +160,7 @@
                         <mat-icon>cloud_upload</mat-icon>
                         <span>Mirror</span>
                       </button>
-                      <button mat-menu-item color="warn" (click)="deleteSelected(item.sha256)">
+                      <button mat-menu-item color="warn" (click)="openDetailsDialog(item)">
                         <mat-icon color="warn">delete</mat-icon>
                         <span class="delete-text">Delete</span>
                       </button>
@@ -207,7 +207,7 @@
                 </th>
                 <td mat-cell *matCellDef="let item">
                   <mat-icon [color]="isSelected(item.sha256) ? 'primary' : ''" 
-                           (click)="toggleItemSelection(item.sha256)">
+                           (click)="$event.stopPropagation(); toggleItemSelection(item.sha256)">
                     {{isSelected(item.sha256) ? 'check_box' : 'check_box_outline_blank'}}
                   </mat-icon>
                 </td>
@@ -216,7 +216,7 @@
               <!-- Name Column -->
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef>Name</th>
-                <td mat-cell *matCellDef="let item">
+                <td mat-cell *matCellDef="let item" class="clickable-cell" (click)="navigateToDetails($event, item)">
                   <div class="file-name-cell">
                     <mat-icon>insert_drive_file</mat-icon>
                     <span>{{ getFileName(item.url) }}</span>
@@ -239,7 +239,9 @@
               <!-- Uploaded Column -->
               <ng-container matColumnDef="uploaded">
                 <th mat-header-cell *matHeaderCellDef>Uploaded</th>
-                <td mat-cell *matCellDef="let item">{{ item.uploaded | date:'medium' }}</td>
+                <td mat-cell *matCellDef="let item" class="clickable-cell" (click)="navigateToDetails($event, item)">
+                  {{ item.uploaded | timestamp:'medium' }}
+                </td>
               </ng-container>
 
               <!-- Actions Column -->
@@ -262,7 +264,7 @@
                       <mat-icon>cloud_upload</mat-icon>
                       <span>Mirror</span>
                     </button>
-                    <button mat-menu-item color="warn" (click)="deleteSelected(item.sha256)">
+                    <button mat-menu-item color="warn" (click)="openDetailsDialog(item)">
                       <mat-icon color="warn">delete</mat-icon>
                       <span class="delete-text">Delete</span>
                     </button>
@@ -272,8 +274,7 @@
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-                  [class.selected]="isSelected(row.sha256)"
-                  (click)="toggleItemSelection(row.sha256)"></tr>
+                  [class.selected]="isSelected(row.sha256)"></tr>
             </table>
           </div>
         }
