fix(media): simplify mirror button tooltip and enhance mirror check logic

--- a/src/app/pages/media/media-details/media-details.component.html
+++ b/src/app/pages/media/media-details/media-details.component.html
@@ -47,8 +47,7 @@
             mat-raised-button 
             color="accent" 
             (click)="mirrorMedia()" 
-            [disabled]="isFullyMirrored()"
-            [matTooltip]="isFullyMirrored() ? 'Already mirrored to all your servers' : 'Mirror to other servers'">
+            [disabled]="isFullyMirrored()">
             <mat-icon>cloud_upload</mat-icon>
             Mirror
           </button>
