feat(media): refactor mirror status logic to use computed signals for improved performance

--- a/src/app/pages/media/media-details/media-details.component.html
+++ b/src/app/pages/media/media-details/media-details.component.html
@@ -47,7 +47,7 @@
             mat-raised-button 
             color="accent" 
             (click)="mirrorMedia()" 
-            [disabled]="isFullyMirrored()">
+            [disabled]="isFullyMirroredStatus()">
             <mat-icon>cloud_upload</mat-icon>
             Mirror
           </button>
