--- a/src/app/pages/media/media-server-dialog/media-server-dialog.component.html
+++ b/src/app/pages/media/media-server-dialog/media-server-dialog.component.html
@@ -55,7 +55,7 @@
   
   <mat-dialog-actions align="end">
     <button mat-stroked-button type="button" (click)="testConnection()" [disabled]="!serverForm.get('url')?.valid || testing()">
-      <mat-icon>link</mat-icon>
+      <mat-icon>sync</mat-icon>
       Test Connection
     </button>
     <button mat-button mat-dialog-close>Cancel</button>
